--- a/index.html
+++ b/index.html
@@ -144,6 +144,66 @@
 		</div>
 	</div>
 
+	<div id="page6" class="page">
+
+		<div class="content_area_narrower centered ">
+
+			<div class="content_area centered ">
+
+				<div class="row centered ">
+
+					<div class="detail_display"></div>
+
+					<div class=" row_content font_lobster font_size_50 scalable">
+						Services
+					</div>
+
+				</div>
+
+				<h2 class="colorWhite">Do you need a skilled hand in developing a module for your project?</h2>
+				<div class="detail font_size_18">
+					<p>
+						CXElegance is well accustomed to receiving a specification and creating a rapid prototype to either prove a concept or to further engage in requirements analysis.
+					</p>
+				</div>
+
+				<h2 class="colorWhite">Do you need a full-stack developer for app development?</h2>
+				<div class="detail font_size_18">
+					<p>
+						CXElegance has a long history of work, primarily with PHP, JavaScript, HTML and CSS, and mostly in Linux environments.
+					</p>
+				</div>
+
+				<h2 class="colorWhite">Do you want to find your data quickly?</h2>
+				<div class="detail font_size_18">
+					<p>
+						CXElegance adopted and adapted organizational methods that SNC-Lavalin, Inc. implemented for its massive international engineering projects, circa 2005.
+					</p>
+				</div>
+
+				<h2 class="colorWhite">Do you want painless, reliable backups?</h2>
+				<div class="detail font_size_18">
+					<p>
+						CXElegance can help you set up a local backup system, with or without cloud redundancy, for very little cost.
+					</p>
+				</div>
+
+				<h2 class="colorWhite">Do you want to learn to code?</h2>
+				<div class="detail font_size_18">
+					<p>
+						Whether it's to build a website, develop a cross-platform app, create some useful scripts, or learn to program in general, CXElegance can help.
+						Jesse's first application developer role was in 2001, while he was still in university – he graduated with a B.Sc. majoring in mathematics and computer science.
+						He has worked for 10 years as an application developer and has been an I.T. professional for nearly 20 years.
+						He has mentored junior professionals by introducing knowledge as-needed, through task-driven exercises.
+					</p>
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
 	<div id="page2" class="page">
 
 		<div class="content_area_narrower centered ">
