--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<!-- ensure smartphones don't try to zoom in automatically, and disable scaling so Android 2.2 and others work with fixed div -->
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- offer a nice smartphone icon - 158 × 158 pixels -->
 	<link rel="apple-touch-icon" href="01_pics/12_iphone.png">
