index: explain sole entity not organization

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 
 					<h2>CXElegance is...</h2>
 					<div class="detail font_size_18">
+						<h5>... just one guy, really</h5>
+						<p>Jesse "CXElegance" is an alter ego derived from a burst of inspiration in 2011.
 						<h5>Break it down: CX</h5>
 						<p>You, the Client, are entitled to a great eXperience in your business interactions.</p>
 						<p>Your expectations, in terms of communication, deliverables and more, shall be met or exceeded... but is this enough?</p>
