index.html: services updated, added copy editing plus security

--- a/index.html
+++ b/index.html
@@ -163,13 +163,6 @@
 
 				</div>
 
-				<h2 class="colorWhite">Do you need a skilled hand in developing a module for your project?</h2>
-				<div class="detail font_size_18">
-					<p>
-						CXElegance is well accustomed to receiving a specification and creating a rapid prototype to either prove a concept or to further engage in requirements analysis.
-					</p>
-				</div>
-
 				<h2 class="colorWhite">Do you need a full-stack developer for app development?</h2>
 				<div class="detail font_size_18">
 					<p>
@@ -177,17 +170,38 @@
 					</p>
 				</div>
 
+				<h2 class="colorWhite">Do you need a skilled hand in developing a module for your project?</h2>
+				<div class="detail font_size_18">
+					<p>
+						CXElegance is well accustomed to receiving a specification and creating a rapid prototype to either prove a concept or to further engage in requirements analysis.
+					</p>
+				</div>
+
 				<h2 class="colorWhite">Do you want to find your data quickly?</h2>
 				<div class="detail font_size_18">
 					<p>
-						CXElegance adopted and adapted organizational methods that SNC-Lavalin, Inc. implemented for its massive international engineering projects, circa 2005.
+						CXElegance adopted and adapted organizational methods that SNC-Lavalin, Inc. used in its massive, international engineering projects.
 					</p>
 				</div>
 
 				<h2 class="colorWhite">Do you want painless, reliable backups?</h2>
 				<div class="detail font_size_18">
 					<p>
-						CXElegance can help you set up a local backup system, with or without cloud redundancy, for very little cost.
+						CXElegance can help individuals and small organizations set up a local backup system, with or without cloud redundancy, with little infrastructure.
+					</p>
+				</div>
+
+				<h2 class="colorWhite">What about privacy, security and data encryption?</h2>
+				<div class="detail font_size_18">
+					<p>
+						CXElegance can help individuals and small organizations form habits that are aligned with best practices for today's Internet.
+					</p>
+				</div>
+
+				<h2 class="colorWhite">How about a sharp eye looking over your app or site's copy?</h2>
+				<div class="detail font_size_18">
+					<p>
+						CXElegance is an English grammar wiz and can help keep your app looking professional; plus he can work with your CMS or dig straight into your HTML.
 					</p>
 				</div>
 
