index.html: move experience to its own detail

--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
 						<p>Surely there's a way we can make things better? Soon? Now?</p>
 					</div>
 
+					<h2>CXElegance is experienced</h2>
+					<div class="detail font_size_18">
+						<p>Jesse's first application developer role was in 2001, while he was still in university – he graduated with a B.Sc. majoring in mathematics and computer science.</p>
+						<p>He has worked for 10 years as an application developer and has been an I.T. professional for nearly 20 years.</p>
+						<p>He has mentored junior professionals by introducing knowledge as-needed, through task-driven exercises.</p>
+					</div>
+
 				</div>
 
 			</div>
@@ -208,10 +215,7 @@
 				<h2 class="colorWhite">Do you want to learn to code?</h2>
 				<div class="detail font_size_18">
 					<p>
-						Whether it's to build a website, develop a cross-platform app, create some useful scripts, or learn to program in general, CXElegance can help.
-						Jesse's first application developer role was in 2001, while he was still in university – he graduated with a B.Sc. majoring in mathematics and computer science.
-						He has worked for 10 years as an application developer and has been an I.T. professional for nearly 20 years.
-						He has mentored junior professionals by introducing knowledge as-needed, through task-driven exercises.
+						Whether it's to build a website, develop a cross-platform app, create some useful scripts, or learn the fundamental principles of software engineering, CXElegance can help.
 					</p>
 				</div>
 
